# AKTU-Autonomous-Institution-Application

./: .env.example  .gitignore  AKTU_Autonomy_WebApp_Workflow_Approval_Draft_A4.docx  README.md  final_AKTU_Autonomy_WebApp_Workflow_Approval.docx  final_AKTU_Autonomy_WebApp_Workflow_Approval.md  package.json  ~$TU_Autonomy_WebApp_Workflow_Approval_Draft_A4.docx  ~$nal_AKTU_Autonomy_WebApp_Workflow_Approval.docx
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_user_institution_id.py  0003_dispatch_tracking_dispatch_date_received_by.py  0004_committee_and_members.py  0005_meetings.py  0006_mom_content_ugc_approval.py  0007_decisions.py
backend/app/: main.py  workflow.py
backend/app/api/: deps.py
backend/app/api/routes/: applications.py  auth.py  documents.py
backend/app/core/: config.py  debug_log.py  logging.py  security.py
backend/app/db/: base.py  models.py  session.py
backend/app/schemas/: application.py  auth.py  committee.py  decision.py  document.py  meeting.py  mom.py
backend/app/services/: decision_letter.py  meeting_notice.py  mom_docx.py  office_order.py
backend/scripts/: seed_synthetic_data.py
backend/tests/: test_application_workflow.py  test_auth_rbac.py  test_committee_office_order.py  test_config.py  test_db_basic.py  test_decision.py  test_document_uploads.py  test_health.py  test_meeting_notice.py  test_mom.py  test_security.py  test_workflow_transitions.py
colab/: AKTU-Autonomous-Institution-Application_run_backend_colab.ipynb  (+1 more)
(+43 files in other folders)
