[tool.poetry]
name = "aktu-autonomy-backend"
version = "0.1.0"
description = "FastAPI backend for AKTU Academic Autonomy Portal"
authors = ["AKTU Autonomy Portal"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
python-dotenv = "^1.0.1"
aiosqlite = "^0.20.0"
sqlalchemy = "^2.0.36"
alembic = "^1.13.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
ruff = "^0.6.0"
black = "^24.8.0"
mypy = "^1.12.0"
jose = "^1.0.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
exclude = [".git", ".venv", "alembic/versions"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

